[gd_scene load_steps=21 format=3 uid="uid://hqa6411o6hsf"]

[ext_resource type="Script" uid="uid://dqw7kqxhj2hen" path="res://scripts/player.gd" id="1_g2els"]
[ext_resource type="Texture2D" uid="uid://bbtlix5m7kq1u" path="res://Assets/Snoblin_Prototype_Character/Assets/Prototype_Character/prototype_character.png" id="2_qhqgy"]
[ext_resource type="Texture2D" uid="uid://c8ksvvk7g2kpf" path="res://Assets/oubliette_weapons - free/spr_wep_steel_falcon_0.png" id="3_dqkch"]
[ext_resource type="Script" uid="uid://cyfvy2j00ira6" path="res://scenes/trail_effect.gd" id="4_dqkch"]

[sub_resource type="Animation" id="Animation_dqkch"]
resource_name = "Idle_down"
length = 2.0
loop_mode = 1
step = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_tuyoq"]
resource_name = "Idle_right"
length = 2.0
loop_mode = 1
step = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 5]
}

[sub_resource type="Animation" id="Animation_fjrip"]
resource_name = "Idle_up"
length = 2.0
loop_mode = 1
step = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [8, 9]
}

[sub_resource type="Animation" id="Animation_qlg0r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_smehm"]
resource_name = "Walk_down"
length = 4.0
loop_mode = 1
step = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_ur7pv"]
resource_name = "Walk_side"
length = 4.0
loop_mode = 1
step = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19]
}

[sub_resource type="Animation" id="Animation_y4r1p"]
resource_name = "Walk_up"
length = 4.0
loop_mode = 1
step = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_qhqgy"]
resource_name = "death_down"
length = 3.0
step = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [36, 37, 38]
}

[sub_resource type="Animation" id="Animation_f1ej7"]
resource_name = "death_side"
length = 3.0
loop_mode = 1
step = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [40, 41, 42]
}

[sub_resource type="Animation" id="Animation_3v2ag"]
resource_name = "hit_down"
length = 2.0
loop_mode = 1
step = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [24, 25]
}

[sub_resource type="Animation" id="Animation_jej6c"]
resource_name = "hit_side"
length = 2.0
loop_mode = 1
step = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [28, 29]
}

[sub_resource type="Animation" id="Animation_d2wvv"]
resource_name = "hit_up"
length = 2.0
loop_mode = 1
step = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [32, 33]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f1ej7"]
_data = {
&"Idle_down": SubResource("Animation_dqkch"),
&"Idle_right": SubResource("Animation_tuyoq"),
&"Idle_up": SubResource("Animation_fjrip"),
&"RESET": SubResource("Animation_qlg0r"),
&"Walk_down": SubResource("Animation_smehm"),
&"Walk_side": SubResource("Animation_ur7pv"),
&"Walk_up": SubResource("Animation_y4r1p"),
&"death_down": SubResource("Animation_qhqgy"),
&"death_side": SubResource("Animation_f1ej7"),
&"hit_down": SubResource("Animation_3v2ag"),
&"hit_side": SubResource("Animation_jej6c"),
&"hit_up": SubResource("Animation_d2wvv")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g2els"]
size = Vector2(33, 51)

[sub_resource type="CircleShape2D" id="CircleShape2D_dqkch"]
radius = 50.04

[sub_resource type="Curve" id="Curve_dqkch"]

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_g2els")
min_animation_speed = 2.0
max_animation_speed = 5.0
swing_offset_distance = 50
trail_fade_duration = 3.0
trail_color = Color(1, 1, 1, 1)
trail_width = 5.0

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -3.8147e-06)
scale = Vector2(3, 3.588)
texture = ExtResource("2_qhqgy")
hframes = 4
vframes = 12

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_f1ej7")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_g2els")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_dqkch")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -47.0
offset_top = -69.0
offset_right = 47.0
offset_bottom = -52.0
show_percentage = false

[node name="AttackSprite" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(77, -3.8147e-06)
scale = Vector2(2.36667, 3.75417)
texture = ExtResource("3_dqkch")

[node name="TrailEffect" type="Line2D" parent="AttackSprite"]
visible = false
width_curve = SubResource("Curve_dqkch")
script = ExtResource("4_dqkch")
trail_color = Color(1, 1, 1, 1)
